School/CP264/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
06:10:58 **** Rebuild of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main_am.o" "..\\src\\main_am.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
Info: Nothing to build for hust4880_lab10
06:22:45 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
06:22:54 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
06:23:52 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
06:48:02 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
06:50:54 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
06:52:25 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
06:56:06 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
07:12:01 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
07:16:09 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
07:17:21 **** Incremental Build of configuration Debug for project hust4880_lab10 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\graph_am.o" "..\\src\\graph_am.c" 
gcc -o hust4880_lab10.exe "src\\graph_am.o" "src\\main_am.o" 
Info: Nothing to build for hust4880_Quiz08
Info: Nothing to build for hust4880_Quiz08
Info: Nothing to build for hust4880_Quiz05
Info: Nothing to build for hust4880_Quiz07
Info: Nothing to build for hust4880_Quiz07
Info: Nothing to build for hust4880_Quiz07
Info: Nothing to build for hust4880_Quiz07
22:45:53 **** Incremental Build of configuration Debug for project hust4880_Quiz07 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\hust4880_quiz07.o" "..\\src\\hust4880_quiz07.c" 
..\src\hust4880_quiz07.c: In function 'rotateRight':
..\src\hust4880_quiz07.c:38:18: warning: implicit declaration of function 'getTreeHeight' [-Wimplicit-function-declaration]
  pivot->height = getTreeHeight(pivot);
                  ^~~~~~~~~~~~~
..\src\hust4880_quiz07.c: In function 'deleteFromTree':
..\src\hust4880_quiz07.c:151:7: warning: suggest explicit braces to avoid ambiguous 'else' [-Wdangling-else]
     if(balanceFactor(root) > 1)
       ^
..\src\hust4880_quiz07.c: In function 'main':
..\src\hust4880_quiz07.c:211:22: error: expected ';' before ')' token
      scanf("%c", str));
                      ^
                      ;
..\src\hust4880_quiz07.c:211:22: error: expected statement before ')' token
..\src\hust4880_quiz07.c:213:21: warning: comparison between pointer and integer
      while(str[key] != NULL){
                     ^~
..\src\hust4880_quiz07.c:226:34: warning: passing argument 2 of 'deleteFromTree' makes integer from pointer without a cast [-Wint-conversion]
      tree = deleteFromTree(tree, str);
                                  ^~~
..\src\hust4880_quiz07.c:120:38: note: expected 'int' but argument is of type 'char *'
 node *deleteFromTree(node *root, int key){
                                  ~~~~^~~
22:46:28 **** Incremental Build of configuration Debug for project hust4880_Quiz07 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\hust4880_quiz07.o" "..\\src\\hust4880_quiz07.c" 
..\src\hust4880_quiz07.c: In function 'rotateRight':
..\src\hust4880_quiz07.c:38:18: warning: implicit declaration of function 'getTreeHeight' [-Wimplicit-function-declaration]
  pivot->height = getTreeHeight(pivot);
                  ^~~~~~~~~~~~~
..\src\hust4880_quiz07.c: In function 'deleteFromTree':
..\src\hust4880_quiz07.c:151:7: warning: suggest explicit braces to avoid ambiguous 'else' [-Wdangling-else]
     if(balanceFactor(root) > 1)
       ^
..\src\hust4880_quiz07.c: In function 'main':
..\src\hust4880_quiz07.c:211:14: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[231]' [-Wformat=]
      scanf("%s", &str);
             ~^   ~~~~
..\src\hust4880_quiz07.c:211:14: warning: format '%s' expects argument of type 'char *', but argument 2 has type 'char (*)[231]' [-Wformat=]
..\src\hust4880_quiz07.c:213:21: warning: comparison between pointer and integer
      while(str[key] != NULL){
                     ^~
..\src\hust4880_quiz07.c:226:34: warning: passing argument 2 of 'deleteFromTree' makes integer from pointer without a cast [-Wint-conversion]
      tree = deleteFromTree(tree, str);
                                  ^~~
..\src\hust4880_quiz07.c:120:38: note: expected 'int' but argument is of type 'char *'
 node *deleteFromTree(node *root, int key){
                                  ~~~~^~~
gcc -o hust4880_Quiz07.exe "src\\hust4880_quiz07.o" 
C:/Program Files/mingw-w64/x86_64-8.1.0-posix-seh-rt_v6-rev0/mingw64/bin/../lib/gcc/x86_64-w64-mingw32/8.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: cannot open output file hust4880_Quiz07.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
22:47:37 **** Incremental Build of configuration Debug for project hust4880_Quiz07 ****
Info: Internal Builder is used for build
gcc -o hust4880_Quiz07.exe "src\\hust4880_quiz07.o" 
17:20:13 **** Incremental Build of configuration Debug for project Huffman_Project ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\huffmanProject.o" "..\\src\\huffmanProject.c" 
..\src\huffmanProject.c: In function 'main':
..\src\huffmanProject.c:338:44: warning: passing argument 1 of 'newNode' makes integer from pointer without a cast [-Wint-conversion]
         huffmanTree = node_combine(newNode(NULL, 0, NULL, NULL), huffmanTree);
                                            ^~~~
..\src\huffmanProject.c:209:12: note: expected 'char' but argument is of type 'void *'
 tree_node* newNode(char value, int frequency, tree_node *left, tree_node *right); //Adam
            ^~~~~~~
..\src\huffmanProject.c: In function 'node_combine':
..\src\huffmanProject.c:413:20: warning: passing argument 1 of 'newNode' makes integer from pointer without a cast [-Wint-conversion]
     return(newNode(NULL, (n1->frequency + n2->frequency), n1, n2));
                    ^~~~
..\src\huffmanProject.c:386:25: note: expected 'char' but argument is of type 'void *'
 tree_node* newNode(char value, int frequency, tree_node *left, tree_node *right)
                    ~~~~~^~~~~
gcc -o Huffman_Project.exe "src\\huffmanProject.o" 
Info: Nothing to build for Huffman_Project
Info: Nothing to build for Huffman_Project
Info: Nothing to build for Huffman_Project
Info: Nothing to build for Huffman_Project
Info: Nothing to build for Huffman_Project
Info: Nothing to build for Huffman_Project
Info: Nothing to build for Huffman_Project
